[gd_scene load_steps=7 format=3 uid="uid://brqk2ou1f2rle"]

[ext_resource type="Script" path="res://game_manager.gd" id="1_r6xi6"]
[ext_resource type="Script" path="res://map_generator.gd" id="1_uxtxt"]
[ext_resource type="TileSet" uid="uid://b6n5fjkbmrfjh" path="res://arena.tres" id="2_3naeh"]
[ext_resource type="PackedScene" uid="uid://desk13aq7n5bm" path="res://ui.tscn" id="5_6mjw4"]
[ext_resource type="PackedScene" uid="uid://dpukfjaytn7gw" path="res://player_camera.tscn" id="5_2414d"]
[ext_resource type="PackedScene" uid="uid://ohm5b1oc5waw" path="res://crosshair.tscn" id="6_1bh30"]

[node name="Main" type="Node2D"]
script = ExtResource("1_r6xi6")

[node name="UI" parent="." instance=ExtResource("5_6mjw4")]

[node name="PlayerCamera" parent="." instance=ExtResource("5_2414d")]
position = Vector2(785, 456)

[node name="MapGenerator" type="Node2D" parent="." node_paths=PackedStringArray("tilemap")]
script = ExtResource("1_uxtxt")
tilemap = NodePath("../TileMap")
steps = 50
initial_walkers = 6
chance_to_spawn_walker = 0.4

[node name="TileMap" type="TileMap" parent="."]
z_index = -10
tile_set = ExtResource("2_3naeh")
format = 2

[node name="Crosshair" parent="." instance=ExtResource("6_1bh30")]

[node name="SpawnContainer" type="Node" parent="."]

[connection signal="player_spawned" from="." to="UI" method="_on_main_player_spawned"]
[connection signal="player_spawned" from="." to="PlayerCamera" method="_on_main_player_spawned"]
[connection signal="start_game_requested" from="UI" to="." method="_on_ui_start_game_requested"]
[connection signal="map_generated" from="MapGenerator" to="." method="_on_map_generator_map_generated"]
